Stop base::OpenFile from leaking fds/handles into child procs.

BUG=688362
TEST=New FileUtilTest.OpenFileNoInheritance fails with previous impl, passes with new impl.

Review-Url: https://codereview.chromium.org/2687713003
Cr-Commit-Position: refs/heads/master@{#449999}

Former-commit-id: d0bc44fa24fba9f483aaddae8e2c29df3524a5d6